07-AKS/12-helm/hem-local/charts/global-network-policies/template/default-allow-dns.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: default-allow-dns
spec:
  namespaceSelector: projectcalico.org/name in {"kube-system"}
  egress:
  - action: Allow
    destination:
      ports:
      - 53
    protocol: UDP
  ingress:
  - action: Allow
    destination:
      ports:
      - 53
    protocol: UDP
  types:
  - Ingress
  - Egress
